[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
actix-cors = "0.6.4"
bcrypt = "0.14"
jsonwebtoken = "8"
chrono = "0.4.23"
regex = "1.7.3"
aes-gcm = "0.10.1"
rand = "0.8.5"
base64 = "0.21.0"
